Update title and content for product listing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Top 15 Productos París Chile</title>
+<title>Top 15 Productos Alamacenes París Chile</title>
 <style>
   body {
     font-family: 'Segoe UI', sans-serif;
@@ -72,3 +72,4 @@
   </table>
 </body>
 </html>
+
