--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </style>
 </head>
 <body>
-  <h1>🛍️ Top 15 Productos Más Vendidos en París Chile</h1>
+  <h1>🛍️ Top 15 Productos Más Vendidos en Almacenes París Chile</h1>
   <table>
     <thead>
       <tr>
@@ -72,4 +72,5 @@
   </table>
 </body>
 </html>
+
 
